# hctl-tui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  hctl-tui-spec.md  matrices.example.yaml  pyproject.toml  setup.sh
.cursor/rules/: semver-on-main.mdc
.github/workflows/: release.yml
scripts/: check_version_sync.py  install-git-hooks.sh  pre_commit_bump_version.py
scripts/git-hooks/: pre-commit
src/hctl_tui/: __init__.py  __main__.py  cli.py
src/hctl_tui/share/: matrices.example.yaml
src/hctl_tui/share/lib/: core.sh  deps.sh  monitor.sh  pipelines.sh  profiles.sh  runner.sh  transfer.sh  tui.sh
